Ports: Fix author link being too wide

--- a/src/app/ports/styles/Ports.module.scss
+++ b/src/app/ports/styles/Ports.module.scss
@@ -53,6 +53,7 @@
 .itemText {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   gap: vars.$padding-xsmall;
 }
 
